use runtime env vars

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 <div class="wrapper">
   <div class="modal">
     <span class="emoji">👏</span>
-    <h1>Good job, <%= name %>!</h1>
+    <h1>You deployed <%= sha %>, <%= name %>!</h1>
     <p>You finished giving feedback to all your peers. We think that’s pretty awesome! Thanks for taking the time!</p>
     <a href="#" class="modal-btn">Great, now take me to my feedback</a>
   </div>
