remove extraneous content from tempalte

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,7 @@
   <div class="modal">
     <span class="emoji">👏</span>
     <h1>You deployed <%= sha %>, <%= name %>!</h1>
-    <p>You finished giving feedback to all your peers. We think that’s pretty awesome! Thanks for taking the time!</p>
-    <a href="#" class="modal-btn">Great, now take me to my feedback</a>
+    <p>You've successfully deployed a web app with <b>GitHub Actions</b>!</p>
   </div>
   <div id="confetti-wrapper">
 </div>
