change some titles

--- a/views/almost.ejs
+++ b/views/almost.ejs
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>You're almost there</title>
+  <title>You're almost there!</title>
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="https://unpkg.com/primer@11.0.0/build/build.css">
 </head>
