--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Express</title>
+  <title>You've deployed!</title>
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="https://unpkg.com/primer@11.0.0/build/build.css">
 </head>
